# nio

./: .gitignore  404.html  CLAUDE.md  Cargo.toml  README.md  biome.json  build.rs  index.html  index.txt  package-lock.json  package.json  playground.html  playground.txt
.github/workflows/: gh-pages.yml
_next/static/LBnl0Y7xw-6h0dKs0duLI/: _buildManifest.js
_pagefind/: pagefind-entry.json  pagefind.en_1d5b8431eb.pf_meta
_pagefind/fragment/: en_df3ecf8.pf_fragment  en_e3ff12c.pf_fragment
_pagefind/index/: en_c4dbea5.pf_index
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  (+4 more)
crates/wasm/: Cargo.toml
docs/: grammar.md  start.html  start.txt
examples/: generate_wasm.rs  run_add.js
nio_parser/: Cargo.toml
nio_parser/src/: grammar.lalrpop  lexer.rs  token.rs
nio_parser/tests/: parser.rs
nio_wasm/: Cargo.toml
nio_wasm/src/: binary.rs  syntax.rs
playground/: 405.js  index.html  main.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
playground/assets/: index.4623caaf.js  nio.66077f3b.wasm
playground/crate/: Cargo.toml
playground/public/: index.html
playground/src/: index.ts  main.ts  vm.ts
src/: ast.rs  ast_to_ir.rs  codegen.rs  eval.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  prelude.rs  repl.rs  typecheck.rs  wasm.rs
src/wasm/: binary.rs
tests/: wasmtime_execution.rs
website/: mdx-components.ts  next.config.js  next.config.ts  package.json  tailwind.config.js  theme.config.tsx  tsconfig.json
website/app/: layout.tsx
website/content/: _meta.ts  index.mdx
website/pages/: _meta.json  playground.mdx
(+78 files in other folders)
